force-app/main/default/objects/Quote_Document_Grouping__mdt/Quote_Document_Grouping__mdt.object-meta.xml
<CustomObject>
    <description>One grouping dimension within a table definition, with a sequence number. Custom Metadata has no ordered list, so nesting order has to be carried by a child record rather than by a delimited field - this is the price of moving definitions out of Apex.</description>
    <label>Quote Document Grouping</label>
    <pluralLabel>Quote Document Groupings</pluralLabel>
</CustomObject>