force-app/main/default/objects/Quote_Document_Grouping__mdt/fields/Dimension__c.field-meta.xml
<CustomField>
    <fullName>Dimension__c</fullName>
    <inlineHelpText>A named dimension: PRODUCT_FAMILY, CHARGE_TYPE, QUOTE_LINE_GROUP, BUNDLE, TRANSACTION_TYPE or INDUSTRY. Use this for values the generator computes rather than reads - BUNDLE and TRANSACTION_TYPE have no single field behind them. For anything that is a plain field, set Field Path instead and avoid the Apex change. Set one or the other, not both.</inlineHelpText>
    <label>Dimension</label>
    <length>40</length>
    <type>Text</type>
</CustomField>