force-app/main/default/objects/Quote_Document_Grouping__mdt/fields/Field_Path__c.field-meta.xml
<CustomField>
    <fullName>Field_Path__c</fullName>
    <inlineHelpText>A field reachable from the Quote Line, such as SBQQ__Product__r.Family or SBQQ__Group__r.SBQQ__BillingFrequency__c. Set this OR Dimension, not both. Paths are validated against the schema when definitions load, so a typo fails generation with a clear message rather than an opaque query error. Note that a field on the Quote or its Account has one value per quote, so it produces a single group - useful as a label, not as a breakdown.</inlineHelpText>
    <label>Field Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>