force-app/main/default/objects/Quote_Document_Grouping__mdt/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <inlineHelpText>Nesting depth, outermost is 1. Two groupings on DIFFERENT levels nest - Phase then Family. Two groupings on the SAME level combine into one composite bucket - Hardware / Recurring as a single group rather than one inside the other. Sequence orders the parts within a level.</inlineHelpText>
    <label>Level</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>