force-app/main/default/objects/Quote_Document_Grouping__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <inlineHelpText>Nesting order, outermost first. Swapping two sequence numbers reverses the nesting - that is the whole change needed for the other permutation.</inlineHelpText>
    <label>Sequence</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>