force-app/main/default/objects/Quote_Document_Grouping__mdt/fields/Table_Definition__c.field-meta.xml
<CustomField>
    <fullName>Table_Definition__c</fullName>
    <inlineHelpText>The table definition this grouping belongs to.</inlineHelpText>
    <label>Table Definition</label>
    <referenceTo>Quote_Document_Table_Def__mdt</referenceTo>
    <relationshipLabel>Groupings</relationshipLabel>
    <relationshipName>Groupings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>